# MyVoice

./: README.md  SESSION_SUMMARY.md  package-lock.json  package.json
.github/workflows/: build.yml
src/: index.html  main.js  overlay.css  overlay.html  overlay.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/styles/: wispr.css
tools/: make_icon.swift
